Fixed overflow of text in action section

--- a/omod/src/main/compass/sass/clinicianfacing/patient.scss
+++ b/omod/src/main/compass/sass/clinicianfacing/patient.scss
@@ -6,3 +6,7 @@
   clear: left;
   width: 97.91666%;
 }
+
+.action-section li {
+  word-break: break-word;
+}
